...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PostFragment">

    <Button
        android:id="@+id/postFragmentFollowButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_background"
        android:text="@string/followBtnNotFollowing"
        android:textStyle="bold"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/postFragmentProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ImageButton
        android:id="@+id/postFragmentLikeButton"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginStart="244dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
...
